tests/compile_fail/tuple_struct.rs
use balsaq::table;

#[table("things")]
pub struct Thing(String);

fn main() {}
